# Eky-Chat-AI-TauriNextTS

./: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.mjs  gen-icons.js  next.config.ts  package.json  tsconfig.json
.opencode/agents/: ui-guidelines.md
_ai_answer_references/: deepseek_answer.md  qwen_answer.md  zai_answer.md
_guidelines/: mcp-guidelines.md  react-typescript-guidelines.md  tauri-guidelines.md  ui-guidelines.md
apps/native/: index.html  package.json  tsconfig.json  vite.config.ts
apps/native/src/: App.tsx
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/src/: main.rs
apps/web/: eslint.config.mjs  next.config.ts  package.json  prettier.config.mjs  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
src-tauri/: tauri.conf.json
src/app/: layout.tsx  page.tsx
src/app/chat/: page.tsx
src/app/chat/[id]/: page.tsx
src/app/history/: page.tsx
src/app/settings/: page.tsx
src/data/adapters/: database-adapter.ts
src/data/repositories/: chat-message-repository.ts  chat-session-repository.ts  index.ts  settings-repository.ts
src/feature/stores/: theme-store.tsx
src/styles/: globals.css  theme.ts
src/themes/: theme.ts
src/types/: index.ts
src/view/components/: chat-drawer.tsx  index.ts  theme-toggle.tsx
src/view/layouts/: page-shell.tsx
