[package]
name = "eky-chat-ai"
version = "0.1.0"
description = "Eky Chat AI - Cross Platform AI Chat App"
authors = ["you"]
edition = "2021"

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-sql = { version = "2.2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
